add action URLs for last device
