# pkg/act-device-api/act_device_api.pb.gw.go
@@ -117,6 +117,24 @@ func local_request_ActDeviceApiService_DescribeDeviceV1_0(ctx context.Context, m
 
 }
 
+func request_ActDeviceApiService_DescribeLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, client ActDeviceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.DescribeLastDeviceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_ActDeviceApiService_DescribeLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, server ActDeviceApiServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.DescribeLastDeviceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_ActDeviceApiService_LogDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, client ActDeviceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq LogDeviceV1Request
 	var metadata runtime.ServerMetadata
@@ -273,6 +291,40 @@ func local_request_ActDeviceApiService_UpdateDeviceV1_0(ctx context.Context, mar
 
 }
 
+func request_ActDeviceApiService_UpdateLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, client ActDeviceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateLastDeviceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := client.UpdateLastDeviceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_ActDeviceApiService_UpdateLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, server ActDeviceApiServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq UpdateLastDeviceV1Request
+	var metadata runtime.ServerMetadata
+
+	newReader, berr := utilities.IOReaderFactory(req.Body)
+	if berr != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", berr)
+	}
+	if err := marshaler.NewDecoder(newReader()).Decode(&protoReq); err != nil && err != io.EOF {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+
+	msg, err := server.UpdateLastDeviceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 func request_ActDeviceApiService_RemoveDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, client ActDeviceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq RemoveDeviceV1Request
 	var metadata runtime.ServerMetadata
@@ -321,6 +373,24 @@ func local_request_ActDeviceApiService_RemoveDeviceV1_0(ctx context.Context, mar
 	}
 
 	msg, err := server.RemoveDeviceV1(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
+func request_ActDeviceApiService_RemoveLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, client ActDeviceApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := client.RemoveLastDeviceV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_ActDeviceApiService_RemoveLastDeviceV1_0(ctx context.Context, marshaler runtime.Marshaler, server ActDeviceApiServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq Empty
+	var metadata runtime.ServerMetadata
+
+	msg, err := server.RemoveLastDeviceV1(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -374,6 +444,29 @@ func RegisterActDeviceApiServiceHandlerServer(ctx context.Context, mux *runtime.
 		}
 
 		forward_ActDeviceApiService_DescribeDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_ActDeviceApiService_DescribeLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/DescribeLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ActDeviceApiService_DescribeLastDeviceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_DescribeLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -446,6 +539,29 @@ func RegisterActDeviceApiServiceHandlerServer(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("PUT", pattern_ActDeviceApiService_UpdateLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/UpdateLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ActDeviceApiService_UpdateLastDeviceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_UpdateLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("DELETE", pattern_ActDeviceApiService_RemoveDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -466,6 +582,29 @@ func RegisterActDeviceApiServiceHandlerServer(ctx context.Context, mux *runtime.
 		}
 
 		forward_ActDeviceApiService_RemoveDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("DELETE", pattern_ActDeviceApiService_RemoveLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/RemoveLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ActDeviceApiService_RemoveLastDeviceV1_0(rctx, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_RemoveLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -550,6 +689,26 @@ func RegisterActDeviceApiServiceHandlerClient(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("GET", pattern_ActDeviceApiService_DescribeLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/DescribeLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ActDeviceApiService_DescribeLastDeviceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_DescribeLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("GET", pattern_ActDeviceApiService_LogDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -610,6 +769,26 @@ func RegisterActDeviceApiServiceHandlerClient(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("PUT", pattern_ActDeviceApiService_UpdateLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/UpdateLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ActDeviceApiService_UpdateLastDeviceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_UpdateLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	mux.Handle("DELETE", pattern_ActDeviceApiService_RemoveDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -630,6 +809,26 @@ func RegisterActDeviceApiServiceHandlerClient(ctx context.Context, mux *runtime.
 
 	})
 
+	mux.Handle("DELETE", pattern_ActDeviceApiService_RemoveLastDeviceV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/ozonmp.act_device_api.v1.ActDeviceApiService/RemoveLastDeviceV1", runtime.WithHTTPPathPattern("/api/v1/devices/last"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ActDeviceApiService_RemoveLastDeviceV1_0(rctx, inboundMarshaler, client, req, pathParams)
+		ctx = runtime.NewServerMetadataContext(ctx, md)
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_ActDeviceApiService_RemoveLastDeviceV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
@@ -638,13 +837,19 @@ var (
 
 	pattern_ActDeviceApiService_DescribeDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "devices", "device_id"}, ""))
 
+	pattern_ActDeviceApiService_DescribeLastDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "devices", "last"}, ""))
+
 	pattern_ActDeviceApiService_LogDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "v1", "devices", "log", "device_id"}, ""))
 
 	pattern_ActDeviceApiService_ListDevicesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "devices"}, ""))
 
 	pattern_ActDeviceApiService_UpdateDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "devices", "device_id"}, ""))
 
+	pattern_ActDeviceApiService_UpdateLastDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "devices", "last"}, ""))
+
 	pattern_ActDeviceApiService_RemoveDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3}, []string{"api", "v1", "devices", "device_id"}, ""))
+
+	pattern_ActDeviceApiService_RemoveLastDeviceV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"api", "v1", "devices", "last"}, ""))
 )
 
 var (
@@ -652,11 +857,17 @@ var (
 
 	forward_ActDeviceApiService_DescribeDeviceV1_0 = runtime.ForwardResponseMessage
 
+	forward_ActDeviceApiService_DescribeLastDeviceV1_0 = runtime.ForwardResponseMessage
+
 	forward_ActDeviceApiService_LogDeviceV1_0 = runtime.ForwardResponseMessage
 
 	forward_ActDeviceApiService_ListDevicesV1_0 = runtime.ForwardResponseMessage
 
 	forward_ActDeviceApiService_UpdateDeviceV1_0 = runtime.ForwardResponseMessage
 
+	forward_ActDeviceApiService_UpdateLastDeviceV1_0 = runtime.ForwardResponseMessage
+
 	forward_ActDeviceApiService_RemoveDeviceV1_0 = runtime.ForwardResponseMessage
+
+	forward_ActDeviceApiService_RemoveLastDeviceV1_0 = runtime.ForwardResponseMessage
 )
